--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -9,6 +9,7 @@ $evenDarkerTeal: rgba(112, 128, 144, 1);
 $white: #ffffff;
 $lightPink: lightpink;
 $charcoal: #333333;
+$charcoal2: rgba(51,51,51,0.25);
 $blueCharcoal: #36454f;
 $slate: #3d3d3d;
 $slideshowGrey: #717171;
