New header styles attempt two

--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -16,7 +16,7 @@ $slideshowGrey: #717171;
 $slideshowBg: #BBB;
 
 // Fonts
-$old-english: 'UnifrakturMaguntia', cursive;
+$old-english: 'UnifrakturMaguntia';
 $poppins: 'Poppins', sans-serif;
 
 // Font Sizes
