--- a/app/scss/styles.css
+++ b/app/scss/styles.css
@@ -148,7 +148,7 @@ a:hover {
   font-weight: bold;
   font-size: 2rem;
   color: #ababab;
-  font-family: "UnifrakturMaguntia", cursive;
+  font-family: "UnifrakturMaguntia";
   letter-spacing: 0.25rem;
   -webkit-transition: font-size 300ms ease-in-out;
   transition: font-size 300ms ease-in-out;
