Fixed form button styling

--- a/app/scss/_contact.scss
+++ b/app/scss/_contact.scss
@@ -77,7 +77,6 @@
         width: 80%;
         color: $lightishGrey;
         border-radius: 0.85rem;
-        text-decoration: none;
     
         box-shadow: -5px -5px 9px rgba(89, 89, 89, 0.35),
         9px 9px 15px rgba(38, 38, 38, 0.7);
@@ -106,7 +105,8 @@ input[type="email"] {
 
 input[type="text"]:focus,
 input[type="textarea"]:focus,
-input[type="email"]:focus {
+input[type="email"]:focus,
+button#submit-form:active {
     box-shadow: inset -4px -4px 8px rgba(28, 28, 28, 0.35),
     inset 8px 8px 8px rgba(53, 53, 53, 0.7);
 }
@@ -133,9 +133,4 @@ input[type="textarea"] {
     font-weight: 500;
     color: $grey;
     letter-spacing: 0.08125rem;
-}
-
-a.submit:active {
-    box-shadow: inset -10px -10px 15px rgba(89, 89, 89, 0.35),
-        inset 10px 10px 15px rgba(53, 53, 53, 0.7);
 }
