Added some basic form validation to contact.html

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -56,6 +56,19 @@ a:hover {
   text-decoration: none;
 }
 
+.btn {
+  display: block;
+  margin: 1.3rem auto 1.75rem 0;
+  padding: 0.675rem;
+  text-align: center;
+  font: inherit;
+  color: $lightishGrey;
+  border-radius: 0.85rem;
+  box-shadow: -5px -5px 9px rgba(89, 89, 89, 0.35),
+  9px 9px 15px rgba(38, 38, 38, 0.7);
+  background-image: linear-gradient(to right, $reallyDkPurple, $dbDkPurple);
+}
+
 .center {
   display: block;
   margin-left: auto;
