--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -4,7 +4,8 @@
 
 @import "globals";
 @import "header";
+@import "error";  
 @import "content";
-@import "contact"; 
+@import "contact";  
 @import "slideshow";
 @import "footer";
