--- a/app/scss/styles.css
+++ b/app/scss/styles.css
@@ -65,6 +65,20 @@ a:hover {
   text-decoration: none;
 }
 
+.btn {
+  display: block;
+  margin: 1.3rem auto 1.75rem 0;
+  padding: 0.675rem;
+  text-align: center;
+  font: inherit;
+  color: #e4e4e4;
+  border-radius: 0.85rem;
+  -webkit-box-shadow: -5px -5px 9px rgba(89, 89, 89, 0.35), 9px 9px 15px rgba(38, 38, 38, 0.7);
+          box-shadow: -5px -5px 9px rgba(89, 89, 89, 0.35), 9px 9px 15px rgba(38, 38, 38, 0.7);
+  background-image: -webkit-gradient(linear, left top, right top, from(#66318a), to(#bb80e2));
+  background-image: linear-gradient(to right, #66318a, #bb80e2);
+}
+
 .center {
   display: block;
   margin-left: auto;
@@ -215,6 +229,37 @@ h3.intro {
 
 .flex-child {
   max-width: 18rem;
+}
+
+.error {
+  display: block;
+  text-align: left;
+  margin: 0 auto;
+  padding: 3rem 0 0 3rem;
+}
+
+.error__btn {
+  width: 8rem;
+}
+
+.error__txt {
+  padding: 0;
+}
+
+input[type="email"].is-invalid {
+  border: 2px solid red;
+}
+
+input[type="email"].is-invalid,
+.error {
+  color: red;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.error {
+  width: 80%;
+  padding: 0;
 }
 
 .content {
