--- a/DB_links/links/app/scss/_globals.scss
+++ b/DB_links/links/app/scss/_globals.scss
@@ -142,12 +142,11 @@ a.featured,
     height: 2rem;
     padding: 0.45rem 1rem;
     font-size: 0.85rem;
-    // font-weight: bold;
     text-decoration: none;
     border: 1.25px solid white;
     border-radius: 3rem;
-    color: rgba(250,250,250,1);
-    background-color: rgba(204,135,145,0.75);
+    color: rgb(192, 192, 192);
+    background-color: rgba(221, 221, 221, 0.5);
     transition: transform 250ms ease-in-out;
 
     &:hover {
