--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -22,13 +22,19 @@ body {
   text-align: center;
   font-family: "Open Sans";
 }
+
 .container {
   max-width: 68rem;
   margin: 0 auto;
 }
 
-.content {
-  flex: 1 0 auto;
+.card {
+  width: 87%;
+  padding: 1rem 2rem 2rem 2rem;
+  box-shadow: -7px -7px 11px rgba(89, 89, 89, 0.35),
+    12px 12px 18px rgba(53, 53, 53, 0.7);
+  border-radius: 0.75rem;
+  overflow: hidden;
 }
 
 h1,
@@ -84,8 +90,13 @@ a:hover {
   font-weight: bold;
 }
 
+// Alignment
 .left-align {
   text-align: left;
+}
+
+.end-align {
+  text-align: end;
 }
 
 // Padding
