--- a/app/scss/styles.css
+++ b/app/scss/styles.css
@@ -35,10 +35,13 @@ body {
   margin: 0 auto;
 }
 
-.content {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
+.card {
+  width: 87%;
+  padding: 1rem 2rem 2rem 2rem;
+  -webkit-box-shadow: -7px -7px 11px rgba(89, 89, 89, 0.35), 12px 12px 18px rgba(53, 53, 53, 0.7);
+          box-shadow: -7px -7px 11px rgba(89, 89, 89, 0.35), 12px 12px 18px rgba(53, 53, 53, 0.7);
+  border-radius: 0.75rem;
+  overflow: hidden;
 }
 
 h1,
@@ -98,6 +101,10 @@ a:hover {
   text-align: left;
 }
 
+.end-align {
+  text-align: end;
+}
+
 .pall {
   padding-top: 0.25rem;
   padding-right: 0.25rem;
@@ -142,28 +149,26 @@ a:hover {
 }
 
 .header {
-  border-bottom: 1px solid rgba(51, 51, 51, 0.25);
   position: fixed;
-  z-index: 2;
   width: 100%;
   top: 0;
+  z-index: 2;
   height: 5rem;
+  text-align: left;
   background-color: #3d3d3d;
+  border-bottom: 1px solid rgba(51, 51, 51, 0.25);
 }
 
 .header__text {
-  -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
   margin: 0.17rem 0 0 2rem;
-  font-weight: bold;
-  font-size: 2rem;
-  color: #ababab;
-  font-family: "UnifrakturMaguntia";
   letter-spacing: 0.25rem;
+  font-size: 2rem;
+  font-weight: bold;
+  font-family: "UnifrakturMaguntia";
+  color: #ababab;
   -webkit-transition: font-size 300ms ease-in-out;
   transition: font-size 300ms ease-in-out;
 }
@@ -173,21 +178,15 @@ a:hover {
   color: #bb80e2;
 }
 
-.header a {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2;
-}
-
 .header__img {
   padding: 0.95rem 0.75rem 0.75rem 0.75rem;
-  width: 5rem;
   border-radius: 6.25rem;
+  width: 5rem;
+  cursor: pointer;
   -webkit-transition: -webkit-transform 300ms ease-in-out;
   transition: -webkit-transform 300ms ease-in-out;
   transition: transform 300ms ease-in-out;
   transition: transform 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
-  cursor: pointer;
 }
 
 .header__img:hover {
@@ -196,9 +195,6 @@ a:hover {
 }
 
 .header__nav {
-  -webkit-box-ordinal-group: 4;
-      -ms-flex-order: 3;
-          order: 3;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -206,29 +202,27 @@ a:hover {
   margin-right: 1.25rem;
 }
 
-.header__nav a {
+.header__nav__link {
   color: #ececec;
   -webkit-transition: font-size 175ms ease-in-out;
   transition: font-size 175ms ease-in-out;
 }
 
-.header__nav a:not(:last-child) {
+.header__nav__link:not(:last-child) {
   margin-right: 1.5rem;
 }
 
-.header__nav a:hover {
+.header__nav__link:hover {
   color: #bb80e2;
   border-bottom: #bb80e2;
   font-size: 1.15rem;
 }
 
 h3.intro {
+  border: 1px solid red;
   padding: 1.8rem;
   margin: 0 auto;
-}
-
-.flex-child {
-  max-width: 18rem;
+  height: 12rem;
 }
 
 .error {
@@ -267,51 +261,8 @@ input[type="email"].is-invalid,
   color: #ababab;
 }
 
-.content__grid {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  gap: 1.875rem;
-}
-
-@media (min-width: 63.9375em) {
-  .content__grid {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-.content__about, .content__card, .content__item {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-@media (min-width: 87.4375em) {
-  .content__about, .content__card, .content__item {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-}
-
-.content__about, .content__card {
+.content__about {
   width: 87%;
-}
-
-.content__item {
-  margin: 6rem auto 0 auto;
-}
-
-.content__card {
-  padding: 1rem 2rem 2rem 2rem;
-  -webkit-box-shadow: -7px -7px 11px rgba(89, 89, 89, 0.35), 12px 12px 18px rgba(53, 53, 53, 0.7);
-          box-shadow: -7px -7px 11px rgba(89, 89, 89, 0.35), 12px 12px 18px rgba(53, 53, 53, 0.7);
-  border-radius: 0.75rem;
-  overflow: hidden;
 }
 
 .content__social-icons {
@@ -341,6 +292,23 @@ input[type="email"].is-invalid,
   font-size: 1.055rem;
 }
 
+article, .content__about {
+  margin: 6rem auto 0 auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media (min-width: 87.4375em) {
+  article, .content__about {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
 .kb {
   background-color: #333333;
   min-height: 35rem;
@@ -350,7 +318,7 @@ input[type="email"].is-invalid,
   padding-bottom: 2rem;
 }
 
-.kb__flex-child {
+.kb__child {
   width: 80%;
   margin: 0 2.5rem;
 }
