Fixed Wishlist and Links page styles

--- a/DB_links/links/app/scss/_variables.scss
+++ b/DB_links/links/app/scss/_variables.scss
@@ -1,6 +1,9 @@
 // Colors
 
 $darkPink: #861657;
-$lightPink: #f6f0c4;
+$dbLavender: #B7AEDB;
+$darkPurple: rgba(150, 91, 184, 0.7);
+$lightPink: #ffc6f1;
+$yellow: #f6f0c4;
 $darkBlue: #060042;
 $white: #ffffff;
