--- a/DB_links/links/app/scss/_globals.scss
+++ b/DB_links/links/app/scss/_globals.scss
@@ -12,14 +12,7 @@ html {
 
 body {
   background-color: $darkPink;
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(2%, $darkPink),
-    color-stop(108%, $lightPink)
-  );
-  background-image: linear-gradient($darkPink 2%, $lightPink 108%);
+  background-image: linear-gradient($dbLavender 2%, $lightPink 108%);
   color: $white;
   min-height: 100vh;
   text-align: center;
@@ -84,7 +77,7 @@ a {
 
 .header > p {
   font-size: 0.8rem;
-  color: $lightPink;
+  color: $yellow;
 
   span {
     display: inline-block;
@@ -138,14 +131,14 @@ a.featured,
   
   &__link {
     flex: 1;
-    color: $white;
+    // color: $white;
     height: 2rem;
     padding: 0.45rem 1rem;
     font-size: 0.85rem;
     text-decoration: none;
     border: 1.25px solid white;
     border-radius: 3rem;
-    color: rgb(192, 192, 192);
+    color: $darkPurple;
     background-color: rgba(221, 221, 221, 0.5);
     transition: transform 250ms ease-in-out;
 
