--- a/DB_links/links/app/scss/style.css
+++ b/DB_links/links/app/scss/style.css
@@ -13,8 +13,8 @@ html {
 
 body {
   background-color: #861657;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(2%, #861657), color-stop(108%, #f6f0c4));
-  background-image: linear-gradient(#861657 2%, #f6f0c4 108%);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(2%, #B7AEDB), color-stop(108%, #ffc6f1));
+  background-image: linear-gradient(#B7AEDB 2%, #ffc6f1 108%);
   color: #ffffff;
   min-height: 100vh;
   text-align: center;
@@ -156,14 +156,13 @@ a.featured,
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  color: #ffffff;
   height: 2rem;
   padding: 0.45rem 1rem;
   font-size: 0.85rem;
   text-decoration: none;
   border: 1.25px solid white;
   border-radius: 3rem;
-  color: silver;
+  color: rgba(150, 91, 184, 0.7);
   background-color: rgba(221, 221, 221, 0.5);
   -webkit-transition: -webkit-transform 250ms ease-in-out;
   transition: -webkit-transform 250ms ease-in-out;
